objects/MaintenanceLinkOrderLine__c.object
<CustomObject>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MaintenanceLinkOrder__c</fullName>
        <label>MaintenanceLinkOrder</label>
        <referenceTo>MaintenanceLinkOrder__c</referenceTo>
        <relationshipLabel>MaintenanceLinkOrderLine</relationshipLabel>
        <relationshipName>MaintenanceLinkOrderLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>auto__c</fullName>
        <description>自動売上</description>
        <label>auto</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bfnm__c</fullName>
        <description>商品名</description>
        <label>bfnm</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cvat__c</fullName>
        <description>税金コード</description>
        <label>cvat</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddta__c</fullName>
        <description>計画納期</description>
        <label>ddta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gndt__c</fullName>
        <description>取込日時</description>
        <label>gndt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ifdt__c</fullName>
        <description>連携日時</description>
        <label>ifdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ifst__c</fullName>
        <description>連携状況</description>
        <label>ifst</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>item__c</fullName>
        <description>品目</description>
        <label>item</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mess__c</fullName>
        <description>エラーメッセージ</description>
        <label>mess</label>
        <length>132</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pono__c</fullName>
        <description>位置番号</description>
        <label>pono</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>prdt__c</fullName>
        <description>計画入庫日</description>
        <label>prdt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pric__c</fullName>
        <description>価格</description>
        <label>pric</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qoor__c</fullName>
        <description>オーダ数量</description>
        <label>qoor</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rcid__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>rcid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfno__c</fullName>
        <description>SFDC販売オーダ番号</description>
        <label>sfno</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>MaintenanceLinkOrderLine</label>
    <nameField>
        <label>MaintenanceLinkOrderLine名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>